@@ -98,6 +98,9 @@ esac
 AC_MSG_RESULT($THREADS)
 AC_SUBST(THREADLIB)
 
+AC_CHECK_LIB(dl, dlopen, EXTRA_TEST_LIBS="$EXTRA_TEST_LIBS -ldl")
+AC_SUBST(EXTRA_TEST_LIBS)
+
 AC_ARG_ENABLE(java-gc,
 changequote(<<,>>)dnl
 <<  --enable-java-gc=TYPE   choose garbage collector [boehm]>>,
